[package]
name = "improxy-js"
version = "0.0.1"
edition = "2018"
authors = ["Jacob Sandin jacob@js.se"]
#description = "Rustls example code and tests that depend on mio."
publish = false

[features]
default = ["logging"]
logging = ["log"]
#dangerous_configuration = ["rustls/dangerous_configuration"]
#quic = ["rustls/quic"]

[dependencies]
mio = { version = "0.7", features = ["os-poll", "tcp"] }
x509-parser = "0.8.0-beta4"
regex = "1.3.9"
rustls = { version = "0.18", features = [] }
log = { version = "0.4.4", optional = true }#, features=["max_level_debug", "release_max_level_warn"] }
env_logger = "0.7.1"
#httparse= {version="1.3.4", features = [ "std"] }


#TODO: Save to GIT.
#TODO: Find a way not to use regex to get dnsnames from DNSNameRef

#TODO: Activate and learn a bit about logging
#TODO: Parse request from client and forward to forward host
#TODO: Make a request of forward host and return responce to client
#TODO: Make tests
#TODO: Write information to README file






#webpki = "0.21.0" #
#serde = "1.0.114"
#serde_derive = "1.0.114"
#docopt = "~1.1"

#hyper = "0.13.7"
#bytes = "0.5.6"
#futures-core = "0.3"
#futures-util = "0.3.5"
#sct = "0.6"


