[package]
name = "cache_iterator"
version = "0.1.0"
authors = ["JacobSandin <jacob@js.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { package = "log", version = "0.4.4"}#, features=["max_level_debug", "release_max_level_warn"] }
dotenv = "0.15.0"
simplelog = "0.7.3"
reqwest = { version = "0.10", features = ["blocking", "cookies"] }
