[package]
name = "cert_plugin_sni_files"
version = "0.1.0"
authors = ["JacobSandin <jacob@js.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
interfaces = { path = "../interfaces", version = "*" }
logg = { package = "log", version = "0.4.4"}#, features=["max_level_debug", "release_max_level_warn"] }
dotenv = "0.15.0"
simplelog = "0.7.3"
rustls = { version = "0.18", features = [] }
x509-parser = "0.8.0-beta4"

[lib]
crate-type = ["dylib"] 
