[package]
name = "cert_plugin_mariadb"
version = "0.1.0"
authors = ["JacobSandin <jacob@js.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
interfaces = { path = "../interfaces", version = "*" }

[lib]
crate-type = ["dylib"] 
