[package]
name = "cert_plugin_mariadb"
version = "0.1.0"
authors = ["JacobSandin <jacob@js.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logg = { package = "log", version = "0.4.4"}#, features=["max_level_debug", "release_max_level_warn"] }
dotenv = "0.15.0"
simplelog = "0.7.3"
interfaces = { path = "../interfaces", version = "*" }
rustls = { version = "0.18", features = [] }
x509-parser = "0.8.0-beta4"
strfmt = "0.1.6"
mysql = "18.2.0"
rand = "*"

[lib]
crate-type = ["dylib"] 
